# dainfos

./: .gitignore  README.md
GraphMatching/: CMakeLists.txt  contributors.txt  from_dainfos.sh  graph_to_dainfos.sh  main_to_dainfos.sh  rg_to_dainfos.sh
GraphMatching/code/: makefile
GraphMatching/code/include/: dsp.h  graph.h
GraphMatching/code/main/: main.cpp  test.cpp  test.h
GraphMatching/code/run/: seed_10_s_1.txt
GraphMatching/code/source/: graph.cpp  graph_topstack_temp.cpp  rg.cpp
GraphMatching/scripts/: double_graph.py  plotResults.py  retrieve_results.py  retrieve_time_exec.py
GraphMatching/scripts/data_plot/_barabasi_s_1/: expandonce_F1-score.txt  expandonce_correct matches.txt  expandonce_matched.txt  expandonce_precision.txt  expandonce_recall.txt  expandwhenstuck_F1-score.txt  expandwhenstuck_correct matches.txt  expandwhenstuck_matched.txt  expandwhenstuck_precision.txt  expandwhenstuck_recall.txt  pgm_F1-score.txt  pgm_correct matches.txt  pgm_matched.txt  pgm_precision.txt  pgm_recall.txt
GraphMatching/scripts/data_plot/_chung_lu_100000_s_1/: expandonce_F1-score.txt  expandonce_correct matches.txt  expandonce_matched.txt  expandonce_precision.txt  expandonce_recall.txt  expandwhenstuck_correct matches.txt  expandwhenstuck_matched.txt  expandwhenstuck_precision.txt  pgm_F1-score.txt  pgm_correct matches.txt  pgm_matched.txt  pgm_precision.txt  pgm_recall.txt
GraphMatching/scripts/data_plot/_erdos_renyi_s_1/: expandonce_F1-score.txt  expandonce_correct matches.txt  expandonce_matched.txt  expandonce_precision.txt  expandonce_recall.txt  (+10 more)
(+363 files in other folders)
